# weaveflow

./: .gitignore  README.md  main.py  pyproject.toml  quickstart.py  test
.github/workflows/: python-app.yml
assets/data/: analyst_ratings_registry.csv  cap_pe_registry.yaml  industry_growth_registry.yaml  industry_metrics_registry.csv  market_data_registry.yaml
assets/output/matrix/: weave_matrix.csv
krystallizer/: __init__.py
krystallizer/_decorators/: __init__.py  _meta.py  _refine.py  _spool.py  _weave.py  spool.py  weave.py
krystallizer/_utils/: __init__.py  _config.py  _reader.py
krystallizer/core/: __init__.py  crystal.py  nxgraph.py
krystallizer/options/: __init__.py
krystallizer/tests/: conftest.py  stock.toml  test_config_loader.py  test_crystal.py  test_crystal_with_spool.py  test_refine.py  test_spool.py
krystallizer/tests/data/: constants.yaml  dummy.py
krystallizer/tests/data/dummy/: dummy.py
tests/: conftest.py  test_config_loader.py  test_errors_matrix.py  test_immutable_meta.py  test_loom.py  test_loom_with_spool.py  test_matrix_weave.py  test_refine.py  test_rethread_identity_and_isolation.py  test_spool.py  test_weave_column_inference.py
tests/data/: averages.json  costs.toml  counts.yaml
tests/test_core/: test_errors_matrix.py  test_loom.py  test_loom_selected_columns.py  test_loom_with_spool.py  test_matrix_weave.py  test_refine_graph.py  test_weave_graph.py
tests/test_decorators/: test_immutable_meta.py  test_refine.py  test_rethread_identity_and_isolation.py  test_spool.py  test_weave_column_inference.py
tests/test_utils/: test_config_loader.py  test_data_profiler.py  test_helpers.py
weaveflow/: __init__.py
weaveflow/_decorators/: __init__.py  _meta.py  _refine.py  _spool.py  _utils.py  _weave.py  meta.py  refine.py  spool.py  weave.py
weaveflow/_errors/: __init__.py  _loom.py  _matrix.py  _spool.py  _weave.py
weaveflow/_utils/: __init__.py  _config.py  _date.py  _reader.py  config.py  conversion.py  filesystem.py  helpers.py  inspect.py  loaders.py  parsers.py  profiler.py
weaveflow/core/: __init__.py  _matrix.py  crystal.py  loom.py  nxgraph.py
weaveflow/core/_abstracts/: __init__.py  loom.py  nxgraph.py
weaveflow/options/: __init__.py
weaveflow/tests/: conftest.py  test_config_loader.py  test_crystal.py  test_crystal_with_spool.py  test_errors_matrix.py  test_loom.py  test_matrix_weave.py  test_refine.py  test_spool.py  test_weave_graph.py
weaveflow/tests/data/: costs.csv
