[project]
name = "weaveflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pygraphviz>=1.14",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
]
