[project]
name = "weaveflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "graphviz>=0.21",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pygraphviz>=1.14",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests (quick subset of tests).",
    "weavegraph: marks tests related to the WeaveGraph functionality.",
    "legend: marks tests for the graph legend.",
    "edges: marks tests for graph edge creation.",
    "empty: marks tests for handling empty tasks.",
]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
